# meeting_ci_interview_solution

./: INTERVIEWER_GUIDE.md  README.md  api.py  data.py  llm_client.py  meeting_service.py  models.py  problem.md  pyproject.toml  run_tests.py
super_ez_version/: README.md  api.py  data.py  llm_client.py  problem.md  requirements.txt
tests/: test_all.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py
