[project]
name = "meeting-ci-question-solution"
version = "0.1.0"
description = "Meeting Intelligence Platform Interview Question - Solution"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tests"]
